@@ -20,6 +20,7 @@
 				Cache::me()->clean();
 				$this->getSome();
 				
+				$this->nonIntegerIdentifier();
 				$this->persistenceInIdentityMap();
 				
 				$this->racySave();
@@ -369,6 +370,32 @@
 			}
 			
 			$this->drop();
+		}
+		
+		public function nonIntegerIdentifier()
+		{
+			$id = 'non-integer one';
+			
+			$bin =
+				TestBinaryStuff::create()->
+				setId($id)->
+				setData("\0!bbq!\0");
+			
+			try {
+				TestBinaryStuff::dao()->import($bin);
+			} catch (DatabaseException $e) {
+				die();
+			}
+			
+			Cache::me()->clean();
+			
+			$prm = Primitive::identifier('id')->of('TestBinaryStuff');
+			
+			$this->assertTrue($prm->import(array('id' => $id)));
+			$this->assertSame($prm->getValue()->getId(), $id);
+			
+			$this->assertEquals(TestBinaryStuff::dao()->getById($id), $bin);
+			$this->assertEquals(TestBinaryStuff::dao()->dropById($id), 1);
 		}
 		
 		protected function getSome()
